--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "echarts": "^5.4.2",
     "react": "^18.2.0",
     "react-calendar": "^4.2.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sanitize.css": "^13.0.0",
+    "styled-components": "^6.0.0-rc.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -25,7 +27,6 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "sass": "^1.62.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   }
